# emoji-extractor

./: .gitignore  1.0  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.txt  big_regex.pkl  build_versions.py  emojis_10k.txt  extract.py  pyproject.toml  random_10k.txt  setup.py  update_latest.py
.github/workflows/: publish.yml  update_unicode.yml
.ipynb_checkpoints/: examples-checkpoint.ipynb
emoji_extractor/: __init__.py  extract.py  possible_emoji.pkl
emoji_extractor/data/: big_regex.pkl  big_regex.txt  possible_emoji.json  possible_emoji.pkl  tme_regex.pkl
emoji_extractor/data/11.0/: big_regex.txt  emoji_sequences.json  possible_emoji.json  tme_regex.txt  tme_sequences.json
emoji_extractor/data/12.0/: big_regex.txt  emoji_sequences.json  possible_emoji.json  tme_regex.txt  tme_sequences.json
emoji_extractor/data/12.1/: big_regex.txt  emoji_sequences.json  tme_regex.txt  tme_sequences.json
emoji_extractor/data/13.0/: big_regex.txt  emoji_sequences.json  possible_emoji.json  tme_regex.txt  tme_sequences.json
emoji_extractor/data/14.0/: big_regex.txt  emoji_sequences.json  possible_emoji.json  tme_regex.txt  tme_sequences.json
emoji_extractor/data/15.0/: big_regex.txt  emoji_sequences.json  possible_emoji.json  tme_regex.txt  tme_sequences.json
emoji_extractor/data/15.1/: big_regex.txt  emoji_sequences.json  possible_emoji.json  (+1 more)
notebooks/: emojis_10k.txt  examples.ipynb  random_10k.txt
notebooks/.ipynb_checkpoints/: examples-checkpoint.ipynb
test_versions/: grab_and_check.py
tests/: test_extractor.py
update_regex/: update_regex.py
(+20 files in other folders)
