[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emoji_extractor"
version = "2.1.0"
description = "Extract, detect and count emoji"
readme = "README.md"
authors = [
  { name = "Alexander Robertson", email = "alexander.duncan.robertson@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alexanderrobertson/emoji-extractor"

[tool.setuptools]
packages = ["emoji_extractor"]
include-package-data = true
