[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emoji_extractor"
version = "17.0"
description = "Extract, detect and count emoji"
readme = "README.md"
authors = [
  { name = "Alexander Robertson", email = "alexander.duncan.robertson@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alexanderrobertson/emoji-extractor"

[tool.hatch.build.targets.wheel]
packages = ["emoji_extractor"]

[tool.hatch.build.targets.sdist]
include = [
    "emoji_extractor",
]
